k8s/deployment/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    service: web
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: messageboard.com  # Replace with the URL you want.
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
